[package]
name = "naturall-e-including-asynch"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
bencher = "0.1.5"
rayon = "1.10.0"
tokio = { version = "1.38.0", features = ["full"] }
tokio-macros = "2.3.0"

[dev-dependencies]
criterion = {  version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "calculate_e"
harness = false
